--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 div {
+    width: 350px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 40px;
     color: #DF0174;
-    margin: 40px;
+    margin: 40px auto;
     padding: 40px;
     border-style: dotted;
     border-color: #ccc;
